feat: add pagination, search
